// PrintHub ERD - generated from the live PrintHubDb schema.
// Paste into https://dbdiagram.io (default style).

Table AuditLogs {
  Id int [pk]
  ActorUserId int
  Action nvarchar
  EntityName nvarchar
  EntityId nvarchar
  OldValue nvarchar
  NewValue nvarchar
  IpAddress nvarchar
  CreatedAt datetime2
  UserAgent nvarchar
}

Table Complaints {
  Id int [pk]
  OrderId int
  CustomerId int
  ShopId int
  Reason int
  Description nvarchar
  Status int
  ProposedResolution int
  ShopResponse nvarchar
  AdminRuling nvarchar
  RefundAmount decimal
  ReplacementOrderId int
  ResolvedBy int
  RespondedAt datetime2
  ResolvedAt datetime2
  CreatedAt datetime2
  UpdatedAt datetime2
  AttachmentUrls nvarchar
  ClosedAt datetime2
  CreatedBy int
  EscalatedAt datetime2
  UpdatedBy int
}

Table DocumentFiles {
  Id int [pk]
  OwnerUserId int
  FileName nvarchar
  StoragePath nvarchar
  ContentType nvarchar
  FileSizeKb bigint
  DeclaredPageCount int
  RightsDeclared bit
  UploadedAt datetime2
  IsDeleted bit
  Checksum nvarchar
  LastAccessedAt datetime2
  PurgeAfter datetime2
}

Table Favourites {
  Id int [pk]
  CustomerId int
  ShopId int
  CreatedAt datetime2
  Note nvarchar
}

Table Machines {
  Id int [pk]
  ShopId int
  Name nvarchar
  MachineType int
  ServiceGroup int
  Status int
  IsDeleted bit
  CreatedAt datetime2
  UpdatedAt datetime2
  CreatedBy int
  LastMaintenanceAt datetime2
  Model nvarchar
  SerialNumber nvarchar
  UpdatedBy int
}

Table Materials {
  Id int [pk]
  ShopId int
  Name nvarchar
  MaterialType int
  Unit nvarchar
  StockQuantity decimal
  LowStockThreshold decimal
  UnitCost decimal
  IsDeleted bit
  CreatedAt datetime2
  UpdatedAt datetime2
  Color nvarchar
  CreatedBy int
  ReorderQuantity decimal
  Sku nvarchar
  UpdatedBy int
}

Table Notifications {
  Id int [pk]
  UserId int
  Title nvarchar
  Content nvarchar
  Type int
  RelatedOrderId int
  IsRead bit
  CreatedAt datetime2
  LinkUrl nvarchar
  ReadAt datetime2
}

Table OrderItems {
  Id int [pk]
  OrderId int
  ServiceTypeId int
  DocumentFileId int
  Quantity int
  PageCount int
  PaperType nvarchar
  ColorMode int
  Sides int
  BindingType nvarchar
  MaterialName nvarchar
  QualityProfile nvarchar
  EstimatedGrams decimal
  UnitPrice decimal
  LineTotal decimal
  ItemNote nvarchar
  EstimatedMinutes int
  SnapshotFileName nvarchar
}

Table Orders {
  Id int [pk]
  OrderCode nvarchar [unique]
  CustomerId int
  ShopId int
  QuoteId int
  MachineId int
  VoucherId int
  Status int
  FulfilmentMethod int
  PickupSlotStart datetime2
  PickupSlotEnd datetime2
  DeliveryAddress nvarchar
  SubTotal decimal
  DiscountAmount decimal
  TotalAmount decimal
  CommissionRate decimal
  CommissionAmount decimal
  ProgressPercent int
  CustomerNote nvarchar
  DeclineReason int
  PlacedAt datetime2
  AcceptedAt datetime2
  CompletedAt datetime2
  CancelledAt datetime2
  CreatedAt datetime2
  UpdatedAt datetime2
  CancellationReason nvarchar
  CreatedBy int
  DeclinedAt datetime2
  EstimatedReadyAt datetime2
  RefundedAmount decimal
  UpdatedBy int
}

Table OrderStatusHistories {
  Id int [pk]
  OrderId int
  FromStatus int
  ToStatus int
  ActorUserId int
  ActorRole int
  Reason nvarchar
  CreatedAt datetime2
  IpAddress nvarchar
}

Table PriceRules {
  Id int [pk]
  ShopServiceId int
  RuleType int
  OptionKey nvarchar
  Multiplier decimal
  FlatExtra decimal
  MinQuantity int
  MaxQuantity int
  IsActive bit
  Description nvarchar
  DisplayOrder int
}

Table Quotes {
  Id int [pk]
  CustomerId int
  ShopId int
  SubTotal decimal
  EstimatedMinutes int
  DistanceMeters float
  BreakdownJson nvarchar
  IsIndicative bit
  ExpiresAt datetime2
  CreatedAt datetime2
  TravelMinutes int
}

Table RefreshTokens {
  Id int [pk]
  UserId int
  Token nvarchar [unique]
  CreatedAt datetime2
  ExpiresAt datetime2
  RevokedAt datetime2
  CreatedByIp nvarchar
  ReplacedByToken nvarchar
  RevokedByIp nvarchar
}

Table Reviews {
  Id int [pk]
  OrderId int [unique]
  CustomerId int
  ShopId int
  Rating int
  Comment nvarchar
  ShopReply nvarchar
  RepliedAt datetime2
  CreatedAt datetime2
  UpdatedAt datetime2
  CreatedBy int
  IsVisible bit
  RepliedByUserId int
  UpdatedBy int
}

Table ServiceTypes {
  Id int [pk]
  Code nvarchar [unique]
  Name nvarchar
  ServiceGroup int
  PricingModel int
  UnitOfMeasure nvarchar
  RequiresFile bit
  Description nvarchar
  IsActive bit
  IsDeleted bit
  CreatedAt datetime2
  UpdatedAt datetime2
  CreatedBy int
  DisplayOrder int
  IconUrl nvarchar
  UpdatedBy int
}

Table Shops {
  Id int [pk]
  OwnerId int
  Name nvarchar
  Description nvarchar
  AddressLine nvarchar
  District nvarchar
  City nvarchar
  Latitude float
  Longitude float
  PhoneNumber nvarchar
  OpenTime time
  CloseTime time
  Status int
  ReviewNote nvarchar
  RatingAverage float
  RatingCount int
  ApprovedAt datetime2
  ApprovedBy int
  IsDeleted bit
  CreatedAt datetime2
  UpdatedAt datetime2
  BusinessLicenseNo nvarchar
  CoverImageUrl nvarchar
  CreatedBy int
  Email nvarchar
  IsTemporarilyClosed bit
  LogoUrl nvarchar
  TaxCode nvarchar
  UpdatedBy int
}

Table ShopServices {
  Id int [pk]
  ShopId int
  ServiceTypeId int
  UnitPrice decimal
  SetupFee decimal
  MinQuantity int
  LeadTimeMinutes int
  IsActive bit
  CreatedAt datetime2
  UpdatedAt datetime2
  CreatedBy int
  MaxQuantity int
  Notes nvarchar
  UpdatedBy int
}

Table ShopStaff {
  Id int [pk]
  ShopId int
  UserId int
  Position nvarchar
  JoinedAt datetime2
  IsActive bit
  InvitedByUserId int
  RevokedAt datetime2
}

Table Users {
  Id int [pk]
  FullName nvarchar
  Email nvarchar [unique]
  PhoneNumber nvarchar
  PasswordHash nvarchar
  Role int
  Status int
  WalletBalance decimal
  DefaultAddress nvarchar
  Latitude float
  Longitude float
  EmailVerifiedAt datetime2
  IsDeleted bit
  CreatedAt datetime2
  UpdatedAt datetime2
  AvatarUrl nvarchar
  CreatedBy int
  LastLoginAt datetime2
  UpdatedBy int
}

Table Vouchers {
  Id int [pk]
  Code nvarchar [unique]
  DiscountType int
  DiscountValue decimal
  MinOrderAmount decimal
  MaxDiscountAmount decimal
  UsageLimit int
  UsedCount int
  ValidFrom datetime2
  ValidTo datetime2
  IsActive bit
  CreatedAt datetime2
  UpdatedAt datetime2
  CreatedBy int
  Description nvarchar
  Name nvarchar
  PerUserLimit int
  UpdatedBy int
}

Table WalletTransactions {
  Id int [pk]
  UserId int
  OrderId int
  Type int
  Amount decimal
  BalanceAfter decimal
  RefCode nvarchar [unique]
  Status int
  ConfirmedBy int
  CreatedAt datetime2
  ConfirmedAt datetime2
  BankReference nvarchar
  Description nvarchar
}

// Relationships (FK -> PK)
Ref: ShopServices.ServiceTypeId > ServiceTypes.Id
Ref: OrderItems.ServiceTypeId > ServiceTypes.Id
Ref: AuditLogs.ActorUserId > Users.Id
Ref: DocumentFiles.OwnerUserId > Users.Id
Ref: Notifications.UserId > Users.Id
Ref: RefreshTokens.UserId > Users.Id
Ref: Shops.OwnerId > Users.Id
Ref: Favourites.CustomerId > Users.Id
Ref: Quotes.CustomerId > Users.Id
Ref: ShopStaff.UserId > Users.Id
Ref: Orders.CustomerId > Users.Id
Ref: Complaints.CustomerId > Users.Id
Ref: OrderStatusHistories.ActorUserId > Users.Id
Ref: Reviews.CustomerId > Users.Id
Ref: WalletTransactions.UserId > Users.Id
Ref: Orders.VoucherId > Vouchers.Id
Ref: OrderItems.DocumentFileId > DocumentFiles.Id
Ref: Favourites.ShopId > Shops.Id
Ref: Machines.ShopId > Shops.Id
Ref: Materials.ShopId > Shops.Id
Ref: Quotes.ShopId > Shops.Id
Ref: ShopServices.ShopId > Shops.Id
Ref: ShopStaff.ShopId > Shops.Id
Ref: Orders.ShopId > Shops.Id
Ref: Complaints.ShopId > Shops.Id
Ref: Reviews.ShopId > Shops.Id
Ref: Orders.MachineId > Machines.Id
Ref: Orders.QuoteId > Quotes.Id
Ref: PriceRules.ShopServiceId > ShopServices.Id
Ref: Complaints.OrderId > Orders.Id
Ref: Complaints.ReplacementOrderId > Orders.Id
Ref: OrderItems.OrderId > Orders.Id
Ref: OrderStatusHistories.OrderId > Orders.Id
Ref: Reviews.OrderId > Orders.Id
Ref: WalletTransactions.OrderId > Orders.Id
